--- a/simplelandingpage.css
+++ b/simplelandingpage.css
@@ -29,6 +29,9 @@ nav li a{
 nav a:hover{
     background-color:rgb(188, 182, 218);
 }
+ .product-container:hover{
+    cursor: grab;
+ }
 
 
 .guto{
@@ -57,6 +60,7 @@ h2{
 }
 footer{
     background-color: rgba(0, 0, 0, 0.477);
+    width: 100%;
 }
 
 footer ul{
